# j_realty_api

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  dev_requirements.txt  prop_api.py  pyproject.toml  requirements.txt  set_up.py  setup.py
.github/workflows/: python-test.yml
j_realty_api/: __init__.py  j_realty_en.py  j_realty_jp.py  test.py
j_realty_api/data/: pref-code-en.json  pref-code-jp.json
prop_api/: prop_api.py
prop_api/data/: jp_prop_transaction_col_names.json
samples/: sample.py  sample_j_realty_en.ipynb  sample_j_realty_jp.ipynb  test.py
tests/: api_test.py  check.py  test.py  test1.py  test_request.py  test_unit_citycode_class.py  test_unit_proptransactions_class.py  try_codes.py
tests/data/: test.csv  transactions_en.csv
