[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "j_realty_api"
version = "0.2"
description = "j_realty_api: Knowing the real estate transaction prices in Japan."
authors= [{name = "HideyukiO", email="hogawa098@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
keywords=["japan", "real estate transaction price"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    ]
dependencies = ["requests", "pandas", "jpyforex"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["j_realty_api/data/*.json"]

[project.urls]
Repository = "https://github.com/mazarimono/j_realty_api"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest",
]

